--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,10 +7,10 @@
 
 :root {
 
-    --black: #151617;
+    --black: #1b1414;
     --maroon: #950101;
     --cafe: #3D0000;
-    --red: #af0101;
+    --red: #570000;
     --White: #ffffff;
 }
 
@@ -34,9 +34,9 @@ body{
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(8, auto);
     grid-template-areas: 
+        "menu menu menu menu"    
         "header_bann header_bann  header_bann header_bann"
         "header header header header"
-        "menu menu menu menu"
         "container container container"
         "productos productos productos productos"
         "sbrnosotros sbrnosotros sbrnosotros sbrnosotros"
@@ -73,7 +73,7 @@ body{
 
 
 .header_bann a:link, a:visited, a:active {
-    text-decoration:none;
+    text-decoration:none ;
     
 }
 
@@ -90,17 +90,59 @@ body{
 
 }
 
+/*contactos_bar*/
+
 .contactos_bann{
 
-    background-color: var(--maroon);
+    background-color: var(--White);
+    background: var(--black);
+    text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
     display: inline;
     padding: 10px 10px;
     margin: 0px 0px 0px 20px ;
+    text-decoration:none ;
     font-size: 15px;
     transition: .8s ease all;
     color: var(--white); 
-
+    
 }
+
+/*Navbar*/
+
+.menu {
+
+    width: 100%;
+    z-index: 999;
+    text-align: center;
+    font-family: 'Noto Serif', serif;
+    font-style: italic;
+    padding: 10px 30px;
+}
+
+.menu__item {
+    background-color: var(--maroon);
+    display: inline-block;
+    margin: 50px;
+    box-shadow: 30px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    box-shadow: inset;
+    font-size: 26px;
+    transition: .8s ease all;
+    color: var(--white);   
+    -webkit-box-shadow: -2px -4px 17px 6px #520000; 
+    box-shadow: -2px -4px 17px 6px #520000;
+}
+
+.menu__item:hover {
+    color: var(--black);
+    text-decoration: none;
+    transition: 1.1s;
+    transform: scale(1.2);
+    background-color: var(--maroon);
+}
+
+
 
 /*header*/
 
@@ -135,37 +177,6 @@ body{
 
 }
 
-/*Navbar*/
-
-.menu {
-
-    width: 100%;
-    z-index: 999;
-    text-align: center;
-    font-family: 'Noto Serif', serif;
-    font-style: italic;
-    padding: 10px 30px;
-}
-
-.menu__item {
-    background-color: var(--maroon);
-    display: inline;
-    margin: 50px;
-    box-shadow: 30px;
-    padding: 10px 30px;
-    border-radius: 20px;
-    font-size: 26px;
-    transition: .8s ease all;
-    color: var(--white);   
-}
-
-.menu__item:hover {
-    color: var(--black);
-    text-decoration: none;
-    transition: 1.1s;
-    transform: scale(1.2);
-    background-color: var(--red);
-}
 
 
 /*Nosotros*/
@@ -283,9 +294,9 @@ resize: none;
 @media screen and (max-width: 768px) {
     .contenedor {
         grid-template-areas: 
+            "menu menu menu "
             "header_bann header_bann header_bann header_bann"
             "header header header header"
-            "menu menu menu "
             "container container container container"
             "productos productos  productos productos"
             "sbrnosotros sbrnosotros sbrnosotros sbrnosotros"
