--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,12 +2,13 @@
 
     box-sizing: border-box;
     color: #ffffff;
+    font-family: 'Cinzel', serif;
 
 }
 
 :root {
 
-    --black: #1b1414;
+    --black: #0f0d0d;
     --maroon: #950101;
     --cafe: #3D0000;
     --red: #570000;
@@ -17,7 +18,6 @@
 body{
 
     font-size: 20px;
-    font-family: 'Cinzel', serif;
     margin: 10px;
     background-color: #151617 !important
 }
@@ -82,7 +82,7 @@ body{
 
     width: 100%;
     z-index: 999;
-    background: var(--black);
+    background: var(--maroon);
     text-align: center;
     font-family: 'Noto Serif', serif;
     font-style: italic;
@@ -95,7 +95,7 @@ body{
 .contactos_bann{
 
     background-color: var(--White);
-    background: var(--black);
+    background: var(--maroon);
     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
     display: inline;
     padding: 10px 10px;
@@ -166,7 +166,7 @@ body{
     
     font-size: 90px;
     font-weight: 400;
-    height: 600px;
+    height: 11em;
     font-family: 'Noto Serif', serif;
     font-style: italic;
     display: flex;
@@ -180,12 +180,13 @@ body{
 
 
 /*Nosotros*/
+
 .nosotros {
     margin-bottom: 60px;
 }
 
 .subtitulo {
-    font-size: 20px;
+    font-size: 30px;
     color: var(--white);
     font-family: 'Noto Serif', serif;
     font-weight: 700;
@@ -196,7 +197,7 @@ body{
 
 .subtitulo__texto {
     
-    padding: 0 15px;
+    padding: 0 15px; 
     z-index: 99;
     position: relative;
 }
@@ -228,6 +229,8 @@ body{
 
 
 }
+
+
 
 .nosotros__enlace {
     display: inline-block;
