--- a/css/estilo.css
+++ b/css/estilo.css
@@ -149,16 +149,19 @@ body{
 .header {
     width: 100%;
     height: 100%;
-    background-image: url(..//img/Color\ Hunt\ Palette\ 0000003d0000950101ff0000.png);
+    background-image: url(../img/fondo.jpg);
     background-position: center;
     background-size: contain;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
+    
 }
 
 .header__fondo {
     width: 100%;
     height: 100%;
     max-width: 100%;
+    border: 10px solid var(--cafe);
+    color: var(--White);
 }
 
 .header__titulo {
