logo nuevo y cambios

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -46,21 +46,25 @@ body{
 
 /*header_bann*/
 
-.header_bann img{
-    
-    width: 25px;
-    height: 25px;
-    margin: 0px 0px 0px 0px;
-    
 
+.header_bann .logo-grande {
+    float: left;
+    margin-right: 20px;
+    width: 70px;
+    height: 50px;
 }
 
-.logo{
-    
-    width: 50px;
-    height: 25px;
-    margin: 0px 0px 0px 0px;
-    
+.contactos {
+    margin-right: 20px;
+}
+
+.contactos_bann {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    margin-bottom: 20px;
+    font-size: 18px;
 }
 
 .header_bann img{
@@ -87,6 +91,9 @@ body{
     font-family: 'Noto Serif', serif;
     font-style: italic;
     padding: 10px 20px;
+    -moz-border-radius: 50px;
+    border-radius: 15px; 
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
 
 }
 
@@ -97,9 +104,9 @@ body{
     background-color: var(--White);
     background: var(--maroon);
     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
-    display: inline;
+    display: inline-block;
     padding: 10px 10px;
-    margin: 0px 0px 0px 20px ;
+    margin: 2px 0px 0px 20px ;
     text-decoration:none ;
     font-size: 15px;
     transition: .8s ease all;
@@ -117,6 +124,8 @@ body{
     font-family: 'Noto Serif', serif;
     font-style: italic;
     padding: 10px 30px;
+    -moz-border-radius: 50px;
+    border-radius: 15px;
 }
 
 .menu__item {
@@ -235,6 +244,7 @@ body{
 
 
 
+
 .nosotros__enlace {
     display: inline-block;
     margin-top: 40px;
@@ -288,11 +298,18 @@ resize: none;
 
 }
 
+.footer{
+
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+
+}
+
 .footer img{
 
     height: 30px;
     width: 30px;
-    
     }
 
 
