--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,7 +18,7 @@
 body{
 
     font-size: 20px;
-    margin: 10px;
+    margin: 0px;
     background-color: #151617 !important
 }
 
@@ -28,20 +28,81 @@ body{
 
     width: 95%;
     max-width: 10000px;
-    margin: 20px auto;
+    margin: 0px 0px 0px 55px;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(8, auto);
     grid-template-areas: 
-        "menu menu menu menu"    
-        "header_bann header_bann  header_bann header_bann"
-        "header header header header"
-        "container container container"
-        "productos productos productos productos"
-        "sbrnosotros sbrnosotros sbrnosotros sbrnosotros"
-        "containerfluid containerfluid containerfluid containerfluid"
-        "footer footer footer footer";
+        "header_bann header_bann header_bann"
+        "menu menu menu "    
+        "header header header "
+        "container  container container "
+        "productos productos productos "
+        "sbrnosotros sbrnosotros  sbrnosotros"
+        "containerfluid containerfluid  containerfluid"
+        "footer footer footer ";
+}
+
+.contenedor> .contenedor .header_bann,
+.contenedor .header,
+.contenedor .menu,
+.contenedor .container,
+.contenedor .productos,
+.contenedor .sbrnosotros,
+.contenedor .container-fluid,
+.contenedor .footer,
+
+.contenedor .header_bann{
+
+    grid-area: header_bann;
+
+}
+
+.contenedor .header {
+
+    grid-area: header;
+
+
+}
+
+.contenedor .menu {
+
+
+    grid-area: menu;
+
+}
+
+.contenedor .container {
+
+    grid-area: container;
+
+
+}
+
+.contenedor .sbrnosotros {
+
+    grid-area: sbrnosotros;
+
+
+}
+
+.contenedor .productos{
+
+    grid-area: productos;
+}
+
+.contenedor .container-fluid {
+
+    grid-area: containerfluid;
+
+}
+
+.contenedor .footer {
+
+    grid-area: footer;
+
+
 }
 
 /*header_bann*/
@@ -51,11 +112,13 @@ body{
     float: left;
     margin-right: 20px;
     width: 70px;
-    height: 50px;
+    height: 70px;
 }
 
 .contactos {
     margin-right: 20px;
+    margin-left: auto;
+    
 }
 
 .contactos_bann {
@@ -76,7 +139,7 @@ body{
 }
 
 
-.header_bann a:link, a:visited, a:active {
+.header_bann .contactos a:link, a:visited, a:active {
     text-decoration:none ;
     
 }
@@ -97,6 +160,27 @@ body{
 
 }
 
+.header_bann .inicio_sesion {
+
+    float: right;
+    margin-bottom: 20px;
+    margin: 12px 25px 0px 30px ;
+    
+    padding: 5px;
+}
+
+
+.inicio_sesion a.ini_sesion {
+    
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 20px;
+    font-size: 15px;
+}
+
+
 /*contactos_bar*/
 
 .contactos_bann{
@@ -106,9 +190,9 @@ body{
     text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
     display: inline-block;
     padding: 10px 10px;
-    margin: 2px 0px 0px 20px ;
+    margin: 4px 50px 0px 150px ;
     text-decoration:none ;
-    font-size: 15px;
+    font-size: 20px;
     transition: .8s ease all;
     color: var(--white); 
     
@@ -158,9 +242,9 @@ body{
 .header {
     width: 100%;
     height: 100%;
-    background-image: url(../img/fondo.jpg);
+    background-image: url(../img/DALL·E\ 2023-04-04\ 11.12.58\ -\ wallpaper\ para\ celular\ s20+\ de\ el\ espacio\ en\ donde\ se\ vea\ la\ tierra\ y\ la\ luna\ .png);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     
 }
@@ -316,15 +400,25 @@ resize: none;
 
 @media screen and (max-width: 768px) {
     .contenedor {
+        width: 95%;
+        max-width: 10000px;
+        margin: 0px 0px 0px 20px;
         grid-template-areas: 
+            "header_bann header_bann header_bann "
             "menu menu menu "
-            "header_bann header_bann header_bann header_bann"
-            "header header header header"
-            "container container container container"
-            "productos productos  productos productos"
-            "sbrnosotros sbrnosotros sbrnosotros sbrnosotros"
-            "containerfluid containerfluid containerfluid containerfluid"
-            "footer footer footer footer";
+            "header header header "
+            "container container container "
+            "productos productos  productos "
+            "sbrnosotros sbrnosotros sbrnosotros "
+            "containerfluid containerfluid containerfluid "
+            "footer footer footer ";
+    }
+
+    body{
+
+        margin: 0px;
+        width: auto;
+        height: auto;
     }
 
     .contenedor .header__titulo {
