--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,25 +1,27 @@
 *{
 
-    
-    color: #ffffff;
     font-family: 'Cinzel', serif;
 
-}
-
-:root {
-
-    --black: #0f0d0d;
-    --maroon: #950101;
-    --cafe: #3D0000;
-    --red: #570000;
-    --White: #ffffff;
 }
 
 body{
 
     font-size: 20px;
     margin: 0px;
-    background-color: #151617 !important
+    
+    
+}
+
+body[data-bs-theme="dark"] {
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+}
+
+body[data-bs-theme="light"] {
+    background-color: #fd9898;
+    color: #333;
+    text-decoration: none;
 }
 
 /*CONTENEDOR*/
@@ -123,7 +125,6 @@ body{
 
 .contactos_bann {
     display: block;
-    color: #fff;
     text-decoration: none;
     font-weight: 600;
     margin-bottom: 20px;
@@ -165,7 +166,6 @@ body{
     float: right;
     margin-bottom: 20px;
     margin: 12px 25px 0px 30px ;
-    
     padding: 5px;
 }
 
@@ -173,7 +173,6 @@ body{
 .inicio_sesion a.ini_sesion {
     
     display: inline-block;
-    color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-right: 20px;
@@ -192,8 +191,7 @@ body{
     padding: 10px 10px;
     text-decoration:none ;
     font-size: 20px;
-    transition: .8s ease all;
-    color: var(--white); 
+    transition: .8s ease all; 
     
 }
 
@@ -220,14 +218,13 @@ body{
     border-radius: 5px;
     box-shadow: inset;
     font-size: 26px;
-    transition: .8s ease all;
-    color: var(--white);   
+    transition: .8s ease all;   
     -webkit-box-shadow: -2px -4px 17px 6px #520000; 
     box-shadow: -2px -4px 17px 6px #520000;
 }
 
 .menu__item:hover {
-    color: var(--black);
+    
     text-decoration: none;
     transition: 1.1s;
     transform: scale(1.2);
@@ -253,7 +250,6 @@ body{
     height: 100%;
     max-width: 100%;
     border: 10px solid var(--cafe);
-    color: var(--White);
 }
 
 .header__titulo {
@@ -268,7 +264,6 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #ffffff;
 
 }
 
@@ -282,7 +277,6 @@ body{
 
 .subtitulo {
     font-size: 30px;
-    color: var(--white);
     font-family: 'Noto Serif', serif;
     font-weight: 700;
     z-index: 2;
@@ -331,14 +325,14 @@ body{
 .nosotros__enlace {
     display: inline-block;
     margin-top: 40px;
-    color: var(--white);
+    
     font-weight: 700;
     border-bottom: 1px solid transparent;
     transition: .3s ease all;
 }
 
 .nosotros__enlace:hover {
-    color: var(--white);
+    
     text-decoration: none;
     letter-spacing: 2px;
     border-bottom: 1px solid var(--Orange-light);
