--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,18 +9,49 @@ body{
     font-size: 20px;
     margin: 0px;
     
-    
+    overflow-x: hidden;
 }
 
 body[data-bs-theme="dark"] {
-    background-color: #333;
+    background-color: #202020;
     color: #fff;
-    text-decoration: none;
+    
+}
+
+body[data-bs-theme="dark"] .header_bann{
+    
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+    
+    
+}
+
+body[data-bs-theme="dark"] .menu__item{
+    
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+    
+    
+}
+
+body[data-bs-theme="dark"] .menu__item:hover{
+    
+    color: #000000;
+    
+}
+
+body[data-bs-theme="dark"] a{
+    
+    color: #fff;
+    
 }
 
 body[data-bs-theme="light"] {
-    background-color: #fd9898;
-    color: #333;
+    background-color: #f1fbfd;
+    color: #000000;
+}
+
+body[data-bs-theme="light"] a{
+    
+    color: #000000;
     text-decoration: none;
 }
 
@@ -30,7 +61,7 @@ body[data-bs-theme="light"] {
 
     width: 95%;
     max-width: 10000px;
-    margin: 0px 0px 0px 55px;
+    margin: 0px 20px 0px 40px;
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
@@ -157,7 +188,7 @@ body[data-bs-theme="light"] {
     padding: 10px 20px;
     -moz-border-radius: 50px;
     border-radius: 15px; 
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+    box-shadow: 1px 1px 15px 17px rgba(29, 0, 0, 0.81);
 
 }
 
@@ -219,8 +250,7 @@ body[data-bs-theme="light"] {
     box-shadow: inset;
     font-size: 26px;
     transition: .8s ease all;   
-    -webkit-box-shadow: -2px -4px 17px 6px #520000; 
-    box-shadow: -2px -4px 17px 6px #520000;
+    box-shadow: 2px -4px 30px 6px #201a1a;
 }
 
 .menu__item:hover {
@@ -228,7 +258,8 @@ body[data-bs-theme="light"] {
     text-decoration: none;
     transition: 1.1s;
     transform: scale(1.2);
-    background-color: var(--maroon);
+    background-color: #950101;
+    color: #f1fbfd;
 }
 
 
@@ -354,6 +385,14 @@ body[data-bs-theme="light"] {
 
 /*Contactanos*/
 
+.form_con{
+
+    border: 2px solid #333;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: -2px -4px 17px 6px #201a1a;
+
+}
 
 #textarea{
 
@@ -371,7 +410,6 @@ resize: none;
     text-align: center;
     align-items: center;
     justify-content: center;
-    background-color: #950101;
 
 }
 
