--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,6 +35,7 @@ body[data-bs-theme="dark"] .menu__item{
 body[data-bs-theme="dark"] .menu__item:hover{
     
     color: #000000;
+    background-color: rgba(116, 0, 0, 0.81);
     
 }
 
@@ -43,6 +44,26 @@ body[data-bs-theme="dark"] a{
     color: #fff;
     
 }
+
+body[data-bs-theme="dark"] .header__fondo{
+    
+    border: 10px solid rgba(87,0,0,0.81);
+    
+}
+
+body[data-bs-theme="dark"] .form_con{
+    
+    box-shadow: -2px -4px 17px 6px rgba(87,0,0,0.81);
+    
+}
+
+body[data-bs-theme="dark"] .footer{
+    
+    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+    
+}
+
+
 
 body[data-bs-theme="light"] {
     background-color: #f1fbfd;
@@ -181,14 +202,13 @@ body[data-bs-theme="light"] a{
 
     width: 100%;
     z-index: 999;
-    background: var(--maroon);
     text-align: center;
     font-family: 'Noto Serif', serif;
     font-style: italic;
     padding: 10px 20px;
     -moz-border-radius: 50px;
     border-radius: 15px; 
-    box-shadow: 1px 1px 15px 17px rgba(29, 0, 0, 0.81);
+    box-shadow: 1px 1px 15px 17px rgba(0, 153, 173, 0.81);
 
 }
 
@@ -241,7 +261,7 @@ body[data-bs-theme="light"] a{
 }
 
 .menu__item {
-    background-color: var(--maroon);
+
     display: inline-block;
     margin: 50px;
     box-shadow: 30px;
@@ -250,7 +270,7 @@ body[data-bs-theme="light"] a{
     box-shadow: inset;
     font-size: 26px;
     transition: .8s ease all;   
-    box-shadow: 2px -4px 30px 6px #201a1a;
+    box-shadow: 2px -4px 30px 6px rgba(0, 153, 173, 0.81);
 }
 
 .menu__item:hover {
@@ -258,8 +278,8 @@ body[data-bs-theme="light"] a{
     text-decoration: none;
     transition: 1.1s;
     transform: scale(1.2);
-    background-color: #950101;
-    color: #f1fbfd;
+    background-color: rgba(0, 153, 173, 0.81);
+    color: #f1fcff;
 }
 
 
@@ -280,7 +300,7 @@ body[data-bs-theme="light"] a{
     width: 100%;
     height: 100%;
     max-width: 100%;
-    border: 10px solid var(--cafe);
+    border: 10px solid rgba(0, 153, 173, 0.81);
 }
 
 .header__titulo {
@@ -366,7 +386,7 @@ body[data-bs-theme="light"] a{
     
     text-decoration: none;
     letter-spacing: 2px;
-    border-bottom: 1px solid var(--Orange-light);
+    border-bottom: 1px solid rgba(0, 153, 173, 0.81);
 }
 
 .nos_iconos {
@@ -390,7 +410,7 @@ body[data-bs-theme="light"] a{
     border: 2px solid #333;
     padding: 10px;
     border-radius: 3px;
-    box-shadow: -2px -4px 17px 6px #201a1a;
+    box-shadow: -2px -4px 17px 6px rgba(0, 153, 173, 0.81);
 
 }
 
@@ -417,7 +437,7 @@ resize: none;
 
     -moz-border-radius: 12px;
     border-radius: 12px;
-    box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
+    box-shadow: 1px 1px 15px 17px rgba(0, 153, 173, 0.81);
 
 }
 
