--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,8 @@
 *{
 
     font-family: 'Cinzel', serif;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -8,7 +10,6 @@ body{
 
     font-size: 20px;
     margin: 0px;
-    
     overflow-x: hidden;
 }
 
@@ -118,7 +119,11 @@ body[data-bs-theme="dark"] .footer{
     
 }
 
+.white-icon{
 
+    color: #fff;
+
+}
 
 body[data-bs-theme="light"] {
     background-color: #f1fbfd;
@@ -131,6 +136,35 @@ body[data-bs-theme="light"] a{
     text-decoration: none;
 }
 
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid rgba(0, 0, 0, 0.1);
+    border-top-color: #007bff;
+    animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+    to {
+    transform: rotate(360deg);
+    }
+}
+
+
 /*CONTENEDOR*/
 
 .contenedor {
@@ -138,7 +172,6 @@ body[data-bs-theme="light"] a{
     width: 100%;
     max-width: 10000px;
     display: grid;
-    
     grid-gap: 20px;
     grid-row-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
@@ -486,12 +519,13 @@ article {
     text-align: justify;
     font-stretch: condensed;
     font-size: small;
+    margin: auto;
     
 }
 
 .image-wrapper{
     text-align: center;
-    margin-left: 100px;
+    margin-left: 50px;
 
 }
 
@@ -522,13 +556,14 @@ article {
     text-align: justify;
     font-stretch: condensed;
     font-size: small;
+    margin: auto;
     
 }
 
 
 .image-wrapper2 {  
     text-align: center;  
-    margin-right: 100px;
+    margin-right: 50px;
 }
 
 
@@ -630,9 +665,10 @@ resize: none;
 
 @media screen and (max-width: 768px) {
     .contenedor {
-        width: 100%;
+        width: auto;
         max-width: 10000px;
-        
+        margin: auto;
+        padding: auto;
         grid-template-areas: 
             "header_bann  header_bann header_bann header_bann "
             "menu menu menu menu "
@@ -642,6 +678,12 @@ resize: none;
             " sobre_mi sobre_mi sobre_mi sobre_mi "
             "contactame contactame contactame contactame "
             "footer footer  footer footer ";
+    }
+    
+    body{
+
+        overflow-x: hidden;
+
     }
 
     .image-wrapper{
@@ -814,10 +856,32 @@ resize: none;
     
     .nos_iconos {
         
-        width: 150px;
-        height: 150px;
-        padding: 20px;
+        width: 170px;
+        height: 170px;
+        margin: 20px;
         
+    }
+
+    .navbar_mobile[data-bs-theme="dark"] {
+        
+        color: #fff;
+    }
+
+    .navbar-collapse[data-bs-theme="dark"]{
+
+        background-color: #a80000;
+
+    }
+
+    .navbar-collapse.show[data-bs-theme="light"]{
+
+        background-color: #00c8ff;
+
+    }
+    
+    .navbar_mobile[data-bs-theme="light"] {
+        background-color: #0095ba;
+        color: #333;
     }
 
     body{
