--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,8 +61,8 @@ body[data-bs-theme="dark"] .header_bann{
     background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
     color: #fff;
     border-bottom: 2px solid #ff0000;
-    border-left: 2px solid #ff0000;
-    border-right: 2px solid #ff0000;
+    border-left: 0px solid #ff0000;
+    border-right: 0px solid #ff0000;
     
 }
 
@@ -112,8 +112,8 @@ body[data-bs-theme="dark"] .footer{
     
     box-shadow: 1px 1px 15px 17px rgba(87,0,0,0.81);
     border-top: 2px solid #ff0000;
-    border-left: 2px solid #ff0000;
-    border-right: 2px solid #ff0000;
+    border-left: 0px solid #ff0000;
+    border-right: 0px solid #ff0000;
     background-image: linear-gradient(to bottom, rgba(170, 0, 0, 0.81), rgba(61, 0, 0, 0.81));
     
 }
@@ -200,7 +200,8 @@ body[data-bs-theme="light"] a{
 
 .contenedor {
 
-    width: 100%;
+    width: 95%;
+    margin: auto;
     max-width: 10000px;
     display: grid;
     grid-gap: 20px;
@@ -694,7 +695,8 @@ resize: none;
 
 @media screen and (max-width: 768px) {
     .contenedor {
-        width: 100%;
+        width: 95%;
+        margin: auto;
         max-width: 10000px;
         grid-template-areas: 
             "header_bann  header_bann header_bann header_bann "
